# ricepheus

./: .dockerignore  Cargo.toml  Dockerfile  prompt.md
src/: main.rs
templates/: main.html
