[package]
name = "ricepheus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie", "cookie-private", "query"] }
dotenv_codegen = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = "1.0.228"
slack-morphism = { version = "2.20.0", features = ["hyper", "rustls-native-certs"] }
tera = { version = "1.20.1", features = ["builtins"] }
time = "0.3.47"
tokio = { version = "1.52.1", features = ["full"] }
tracing-subscriber = "0.3.23"
